import { mount } from '../../../test';

test('radio-group change', () => {
  const wrapper = mount({
    template: `
      <win-radio-group v-model="result" @change="$emit('change', $event)">
        <win-radio
          v-for="item in list"
          :key="item"
          :name="item"
          :disabled="item === 'd'"
        >
          label
        </win-radio>
      </win-radio-group>
    `,
    data() {
      return {
        result: 'a',
        list: ['a', 'b', 'c', 'd'],
      };
    },
  });

  const icons = wrapper.findAll('.win-radio__icon');
  const labels = wrapper.findAll('.win-radio__label');

  icons.at(2).trigger('click');
  expect(wrapper.vm.result).toEqual('c');
  expect(wrapper.emitted('change')[0][0]).toEqual('c');

  labels.at(1).trigger('click');
  expect(wrapper.vm.result).toEqual('b');
  expect(wrapper.emitted('change')[1][0]).toEqual('b');

  icons.at(3).trigger('click');
  labels.at(3).trigger('click');
  expect(wrapper.vm.result).toEqual('b');
});

test('radio group disabled', () => {
  const wrapper = mount({
    template: `
      <win-radio-group v-model="result" disabled @change="$emit('change', $event)">
        <win-radio
          v-for="item in list"
          :key="item"
          :name="item"
        >
          label
        </win-radio>
      </win-radio-group>
    `,
    data() {
      return {
        result: 'a',
        list: ['a', 'b', 'c', 'd'],
      };
    },
  });

  const icons = wrapper.findAll('.win-radio__icon');
  icons.at(2).trigger('click');

  expect(wrapper.emitted('change')).toBeFalsy();
});

test('icon-size prop', () => {
  const wrapper = mount({
    template: `
      <win-radio-group icon-size="10rem">
        <win-radio>label</win-radio>
        <win-radio icon-size="5rem">label</win-radio>
      </win-radio-group>
    `,
  });

  expect(wrapper).toMatchSnapshot();
});

test('checked-color prop', () => {
  const wrapper = mount({
    template: `
      <win-radio-group checked-color="black">
        <win-radio :value="true">label</win-radio>
        <win-radio :value="true" checked-color="white">label</win-radio>
      </win-radio-group>
    `,
  });

  expect(wrapper).toMatchSnapshot();
});
